tests/paczka1/fuzzy1/19490076.err
Error in line 3: 4QjrpB A435 30,3
Error in line 4: 4QjrpB S55 26,4
Error in line 6: A435 S957 65,1
Error in line 8: 4QjrpB S957 7,5
Error in line 10: 4QjrpB S55 68,1
Error in line 9: A435 A626 85,0
Error in line 29: 3VUn A435 4,3
Error in line 30: 4QjrpB A626 56,8
